[package]
name = "bartender"
description = "Opinionated, hackable and extendable multiprotocol web proxy manager"
authors = ["Dimitriy \"ay0ks\" <ay0o0ks000@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ay0ks/bartender"

[dependencies]